# ajanta

./: .dockerignore  .gitignore  .gitmodules  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: deploy-web-ide.yml
aj-lang/: pyproject.toml
aj-lang/aj_lang/: __init__.py  decorators.py  encoding.py  host.py  intrinsics.py  runtime.py  semantics.py  types.py
aj-lang/aj_lang/cli/: main.py
aj-lang/aj_lang/transpiler/: code_gen.py  error.py  transpile.py  var_collector.py
ajanta-build-tool/: Cargo.toml
ajanta-build-tool/src/: cli.rs  lib.rs  main.rs
ajanta-build-tool/src/commands/: build.rs  disasm.rs  mod.rs  polkavm_cc_build.rs
examples/c/: counter.c  hello.c  token.c
examples/cpp/: hello.cpp
examples/python/: hello.py  token.py
playground/: .gitmodules  pyproject.toml
playground/playground/: genesis.json  log_setup.py  settings.py
playground/playground/execution/: host_call.py  utils.py
playground/playground/execution/invocations/: accumulate.py  arg_invoke.py  is_authorized.py  on_transfer.py  protocol.py  refine.py
playground/playground/execution/invocations/functions/: accumulate_fns.py  general_fns.py  protocol.py  refine_fns.py
playground/playground/invocations/: accumulate.py  arg_invoke.py  is_authorized.py  refine.py
playground/playground/types/: __init__.py
playground/playground/types/audit/: tranche.py
playground/playground/types/network/: stream.py
playground/playground/types/protocol/: __init__.py  core.py  crypto.py  merkle.py  ticket.py  validators.py
playground/playground/types/state/: __init__.py  alpha.py  beta.py  chi.py  delta.py  eta.py  gamma.py  iota.py  kappa.py  lambda_.py  omega.py  partial.py  phi.py  pi.py  psi.py  rho.py  sigma.py  state.py  tau.py  theta.py  xi.py
playground/playground/types/state/accumulation/: __init__.py  types.py
playground/playground/types/storage/: item_extrinsics.py
playground/playground/types/work/: __init__.py  execution.py  item.py  manifest.py  package.py  report.py  shard.py
playground/playground/utils/: constants.py
playground/tests/: test_accumulate.py  test_counter.py  test_jam_sdk_token.py  test_refine.py  test_refine_0_bal.py  test_token.py
scripts/: setup.sh  update-deps.sh
sdk/: README.md
sdk/src/: jam_codec.c  jam_codec.h  jam_log.c  jam_log.h  jam_pvm.h  jam_runtime.c  jam_runtime.h  jam_sdk.c  jam_sdk.h  jam_service.c  jam_service.h  jam_state.h  jam_state_vars.h  jam_storage.c  jam_storage.h  jam_str.c  jam_str.h
sdk/stubs/: entry.S  exports.S  runtime.c
src/ajanta/: __init__.py
src/ajanta/cli/: __init__.py  main.py
tests/: test_sdk.py  test_token_py.py  test_transpiler.py
web-ide/: docker-compose.yml
web-ide/backend/: Dockerfile  main.py  pyproject.toml  start.sh
web-ide/deploy/: infrastructure.sh
web-ide/frontend-next/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
web-ide/frontend-next/app/: globals.css  layout.tsx  page.tsx
web-ide/frontend-next/components/ide/: Console.tsx  ControlPanel.tsx  EditorArea.tsx  Header.tsx  Sidebar.tsx
web-ide/frontend-next/components/ui/: NewFileModal.tsx  button.tsx  tabs.tsx
web-ide/frontend-next/lib/: types.ts
web-ide/frontend-next/lib/hooks/: useFileSystem.ts  useKeyboardShortcuts.ts
web-ide/frontend-next/lib/jam/: deploy.ts  index.ts  jamClient.ts  jamEncoder.ts  nullAuthorizer.ts  scaleCodec.ts  types.ts
