[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ajanta"
version = "0.1.0"
description = "Ajanta SDK - Build JAM services in Python"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Chainscore", email = "dev@chainscore.io"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aj-lang",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
]

[project.scripts]
ajanta = "ajanta.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ajanta*"]

[tool.setuptools.package-data]
ajanta = ["include/*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.uv.workspace]
members = [
    "aj-lang",
]

[tool.uv.sources]
aj-lang = { workspace = true }
