[project]
name = "jam-playground"
version = "0.1.0"
description = "Playground for JAM SDK"
requires-python = ">=3.11,<3.13"
dependencies = [
    "tsrkit-pvm",
    "jam-types",
    "pytest",
    "tsrkit-asm",
]

[tool.uv.sources]
tsrkit-pvm = { path = "../../../tsrkit-pvm", editable = true }
jam-types = { path = "../../../jam-types-py", editable = true }
tsrkit-asm = { path = "../../../tsrkit-asm", editable = true }
