[project]
name = "jam-playground"
version = "0.1.0"
description = "Playground for JAM SDK"
requires-python = ">=3.11,<3.13"
dependencies = [
    "tsrkit-types",
    "tsrkit-pvm",
    "pytest",
    "tsrkit-asm",
    "safe-pysha3>=1.0.5",
]

[tool.uv.sources]
tsrkit-pvm = { path = "deps/tsrkit-pvm", editable = true }
tsrkit-types = { path = "deps/tsrkit-types", editable = true }
tsrkit-asm = { path = "deps/tsrkit-asm", editable = true }
